src/dotnet/UI.Blazor/Components/Menu/menu.css
.ac-menu-host {
    @apply fixed inset-0 overflow-hidden pointer-events-none z-menu-container;
}
.ac-menu-overlay {
    background-color: rgba(0,0,0,.32);
}
.ac-menu {
    @apply hidden absolute bg-01 rounded-xl p-1 pointer-events-auto z-menu;
    box-shadow: 0 10px 20px rgba(0,0,0,.3), 0 0 0 1px #eee;
}
.ac-menu.mobile {
    @apply !left-1 !top-auto right-1 bottom-0 rounded-bl-none rounded-br-none;
}
.ac-menu-hover {
    @apply hidden absolute bg-01 rounded-full p-1 border border-bg-03 pointer-events-auto z-menu-hover;
}
.ac-menu-hover .btn.btn-round .btn-content {
    @apply min-h-8 min-w-8 max-h-8 min-h-8 bg-01;
}
.ac-menu-hover .btn.btn-round:hover .btn-content {
    @apply bg-round-hover;
}
.ac-menu-list {
}
.ac-menu-item {
    @apply flex min-w-[120px] p-[6px] rounded-xl h-10 whitespace-nowrap hover:bg-round-hover text-02 cursor-pointer whitespace-nowrap;
}
.ac-menu-separator {
    @apply h-0 mx-2 my-1 border-b border-bg-04 bg-transparent;
}
.ac-menu-content {
    @apply flex-x gap-x-2 items-center;
}
.ac-menu-icon > i {
    @apply text-icons-01 text-2xl;
}
.mobile .ac-menu-icon > i {
    @apply text-2xl;
}
.ac-menu-text {
    @apply w-full text-02 text-base font-medium mr-2;
}
.mobile .ac-menu-text {
    @apply text-xl;
}
.ac-menu-item:hover .ac-menu-icon {
    @apply text-primary;
}
.ac-menu-item.important-item .ac-menu-icon > i,
.ac-menu-item.important-item.off .ac-menu-icon > i,
.ac-menu-item.important-item .ac-menu-text,
.ac-menu-item.important-item.off .ac-menu-text {
    @apply text-primary;
}
.ac-menu-item.important-item.on .ac-menu-icon > i,
.ac-menu-item.important-item.on .ac-menu-text {
    @apply text-error;
}
.ac-menu-item.important-item.on:hover {
    @apply bg-error-hover;
}
.ac-menu-item.warning-item:hover {
    @apply bg-error-hover;
}
.ac-menu-item.warning-item:hover .ac-menu-icon > i,
.ac-menu-item.warning-item:hover .ac-menu-text {
    @apply text-error;
}

